# dice-bot-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo.bat
src/: after_sundown.rs  champions.rs  dice.rs  drag_init.rs  earthdawn.rs  eote.rs  global_gen.rs  letters.rs  lib.rs  shadowrun.rs  sigil.rs  stat2e.rs  thaco.rs  trek.rs  warhammer.rs
src-bak/: earthdawn.rs  eote.rs  lib.rs
