[package]
name = "dice-bot"
version = "0.5.1-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord","dice"]
description = "A discord bot to roll RPG dice rolls."
license = "Zlib"
publish = false
edition = "2018"

[dependencies]
serenity = { version = "0.8", features = ["framework", "standard_framework"] }
randomize = "3"

[profile.release]
lto = true
codegen-units = 1
