[package]
name = "dice-bot"
version = "0.6.1"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord","dice"]
description = "A discord bot to roll RPG dice rolls."
license = "Zlib"
publish = false
edition = "2018"

[dependencies]
serenity = { version = "0.8", features = ["framework", "standard_framework"] }
randomize = "3"
getrandom = "0.1"
bytemuck = "1"

[profile.release]
lto = true
codegen-units = 1
