[package]
name = "dice-bot"
version = "0.7.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/dice-bot-rs"
readme = "README.md"
keywords = ["discord", "dice"]
description = "A discord bot to roll RPG dice rolls."
license = "Zlib"
publish = false
edition = "2018"

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
bytemuck = "1"
randomize = { version = "5.0.0", features = ["getrandom"] }

[profile.release]
lto = true
codegen-units = 1
